# polymarket-binary-bot

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt  rnd_backtest.py  run_bot.py  watch.py
data/: smoke.db
docs/: DEPLOYMENT.md  polymarket-binary-bot.service
replay/: multi_market.jsonl  sample_btc_book.jsonl
scripts/: generate_replay.py  smoke_test.py
src/polymarket_bot/: __init__.py  config.py  db.py  market_feed.py  market_filter.py  models.py  replay.py  resolver.py  risk.py  runner.py  service.py  signals.py  strategy.py  telegram.py
src/polymarket_bot/execution/: base.py  live.py  live_feed_adapter.py  paper.py
tests/: test_compile_import.py  test_db.py  test_execution.py  test_market_filter.py  test_resolver.py  test_risk.py  test_runner.py  test_service.py  test_signals.py  test_strategy.py
